--- a/style.css
+++ b/style.css
@@ -1,122 +1,121 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-body{
-    display: flex;
-    background-color: #1a1a1d;
-    justify-content: center;
-    min-height: 100vh;
-    align-items: center;
-    color: #e3e2df;
+body {
+  display: flex;
+  background-color: #1a1a1d;
+  justify-content: center;
+  min-height: 100vh;
+  align-items: center;
+  color: #e3e2df;
 }
-.container{
-    width: 50vw;
-    background-color: #950740;
-    border-radius: 3vw;
+.container {
+  width: 50vw;
+  background-color: #950740;
+  border-radius: 1vw;
+  padding: 0 2vw;
 }
-.header{
-    font-family: 'Nerko One',sans-serif;
-    font-size: 2.5em;
-    line-height: 4rem;
-    text-align: center;
+.header {
+  font-family: "Nerko One", sans-serif;
+  font-size: 2.5em;
+  line-height: 4rem;
+  text-align: center;
 }
-.search{
-    display: grid;
-    grid-template-columns: 5fr 1fr;
-    padding: 0%;
-    padding: 1vh 2vw;
-    flex-wrap: wrap;
-
+.search {
+  display: grid;
+  grid-template-columns: 5fr 1fr;
+  padding: 0%;
+  padding: 1vh 0;
+  flex-wrap: wrap;
 }
-.search-bar input[type=text]{
-    outline: 0;
-    background-color: #4e4e50;
-    font-family: 'Dosis',serif;
-    font-size: 1.4em;
-    font-weight: 600;
-    padding: 0.30em 1.5%;
-    border: 0;
-    width: 97%;
-    color: #e3e2df;
-    border-radius: 1vw 0 0 1vw;
-
-
+.search-error {
+  display: none;
 }
-.search-button button{
-    font-family: "Nerko One", serif;
-    font-size: 1.4em;
-    padding: 0.30em 0em;
-    border: 0;
-    height: 100%;
-    width: 100%;
-    cursor: pointer;
-    background-color:  #1a1a1d;
-    color: #e3e2df;
-    border-radius: 0 1vw 1vw 0;
+.search-bar input[type="text"] {
+  outline: 0;
+  background-color: #4e4e50;
+  font-family: "Dosis", serif;
+  font-size: 1.4em;
+  font-weight: 600;
+  padding: 0.3em 1.5%;
+  border: 0;
+  width: 97%;
+  color: #e3e2df;
+  border-radius: 0.5vw 0 0 0.5vw;
 }
-.list{
-    padding: 0 2vw;
+.search-button button {
+  font-family: "Nerko One", serif;
+  font-size: 1.4em;
+  padding: 0.3em 0em;
+  border: 0;
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+  background-color: #1a1a1d;
+  color: #e3e2df;
+  border-radius: 0 0.5vw 0.5vw 0;
 }
-.item{
-    margin: 2vh 0;   
-    font-family: 'Dosis',serif;
-    font-size: 1.4em;
-    font-weight: 600;
-    padding: 0.3em 0.5em;
-    background-color: #4e4e50;
-    border-radius: 1vw;
+.item {
+  margin: 2vh 0;
+  font-family: "Dosis", serif;
+  font-size: 1.4em;
+  font-weight: 600;
+  padding: 0.3em 0.5em;
+  background-color: #4e4e50;
+  border-radius: 0.5vw;
+	overflow: hidden;
+  word-wrap: break-word;
 }
-.fa-sharp{
-    margin: 0 0.5em;
-    cursor: pointer;
-    background-color: #4e4e50 !important;
+.fa-sharp {
+  margin: 0 0.5em;
+  cursor: pointer;
+  background-color: #4e4e50 !important;
 }
-.footer{
-    padding: 0 2vw;
-    display: flex;
-    justify-content: space-between;
-    padding: 1vh 2vw;
-    margin-bottom: 1vh;
+.footer {
+  padding: 0 2vw;
+  display: flex;
+  justify-content: space-between;
+  padding: 1vh 0;
+  margin-bottom: 1vh;
 }
-.count{
-    font-family: 'Dosis',serif;
-    font-size: 1.4em;
-    padding: 0.30em 0;
-    font-weight: 700;
+.count {
+  font-family: "Dosis", serif;
+  font-size: 1.4em;
+  padding: 0.3em 0;
+  font-weight: 700;
 }
-.clear button{
-    background-color:  #1a1a1d;
-    font-family: "Nerko One", serif;
-    font-size: 1.4em;
-    padding: 0.30em 0;
-    border: 0;
-    width: 11vw;
-    height: 100%;
-    cursor: pointer;
-    color: #e3e2df;
-    border-radius: 1vw;
+.clear button {
+  background-color: #1a1a1d;
+  font-family: "Nerko One", serif;
+  font-size: 1.4em;
+  padding: 0.3em 0;
+  border: 0;
+  width: 10vw;
+  height: 100%;
+  cursor: pointer;
+  color: #e3e2df;
+  border-radius: 0.5vw;
 }
-.fa-sharp{
-    color:#1a1a1d
+.fa-sharp {
+  color: #1a1a1d;
 }
-
 
 @media only screen and (max-width: 1100px) {
-    .container{
-        width: 70vw;
-    }
-    .clear button{
-        width: 15vw;
-    }
+  .container {
+    width: 70vw;
+  }
+  .clear button {
+    width: 15vw;
+  }
 }
 
 @media only screen and (max-width: 650px) {
-    .container{
-        width: 100vw;
-        height: 100vh;
-    }
-    .clear button{
-        width: 25vw;
-    }
+  .container {
+    width: 100vw;
+    height: 100vh;
+  }
+  .clear button {
+    width: 25vw;
+  }
 }
